<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".AddService">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorPrimaryDark"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chatToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/groupInfoBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_back"
                    app:tint="@android:color/white"
                    tools:ignore="ContentDescription,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/txCustomerRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/add_your_service"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="#C9000000"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            tools:ignore="ScrollViewSize">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center_horizontal"
                android:text="@string/please_provide_service_details"
                android:textColor="@color/white"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <EditText
                    android:id="@+id/edServiceType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/service_name"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edServicePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/service_price"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edServiceType"
                    tools:ignore="Autofill,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/service_description"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edServicePrice"
                    tools:ignore="Autofill,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edBankAccountHolderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Bank Account Holder Name"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edDescription"
                    tools:ignore="Autofill,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edBankAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Bank Account Number"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edBankAccountHolderName"
                    tools:ignore="Autofill,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edIFSCCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Bank IFSC Code"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edBankAccountNumber"
                    tools:ignore="Autofill,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edBankUPI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/input_bg_reg"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Bank UPI ID"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edIFSCCode"
                    tools:ignore="Autofill,TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnAddService"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/add_service"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>